--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,62 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>ch.fortysix</groupId>
+                <artifactId>maven-postman-plugin</artifactId>
+                <version>0.1.6</version>
+                <executions>
+                    <execution>
+
+                        <id>send a mail</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>send-mail</goal>
+                        </goals>
+                        <inherited>true</inherited>
+
+                        <configuration>
+                            <!-- From Email address -->
+                            <from>gabitendong@gmail.com</from>
+
+                            <!--  Email subject -->
+                            <subject>Test Automation Report</subject>
+
+                            <!-- Fail the build if the mail doesnt reach -->
+                            <failonerror>false</failonerror>
+
+                            <!-- host -->
+                            <mailhost>smtp.gmail.com</mailhost>
+                            <!-- port of the host -->
+                            <mailport>465</mailport>
+                            <mailssl>true</mailssl>
+                            <mailAltConfig>true</mailAltConfig>
+
+                            <!-- Email Authentication(USername and Password) -->
+                            <mailuser>gabitendong@gmail.com</mailuser>
+                            <mailpassword>gabi2017</mailpassword>
+
+                            <receivers>
+                                <!-- To Email address -->
+                                <receiver>gtendong@gmail.com</receiver>
+                            </receivers>
+
+                            <fileSets>
+                                <fileSet>
+                                    <!-- Report directory Path -->
+                                    <directory>C:\Users\Gabriel\Documents\PAWK\Projets\ArvalTestAutomation\reports\html-reports\cucumber-html-reports</directory>
+                                    <includes>
+                                        <!-- Report file name -->
+                                        <include>**/overview-features.html</include>
+                                    </includes>
+                                    <!-- Use Regular Expressions like **/*.html if you want all the html files to send-->
+                                </fileSet>
+                            </fileSets>
+
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
                 <version>5.3.0</version>
